--- a/templates/index.html
+++ b/templates/index.html
@@ -141,14 +141,13 @@
       </div>
       <footer>
       <p>
-        Created by <a href="https://burke.services">Kevin
-        Burke</a>. The multi-emailer is <b>not</b> free
-        software. By viewing this page, you agree to the
-        <a href="/terms-of-service">terms of use</a>. Read our
-        <a href="/privacy">privacy policy</a>.
+        Created by <a href="https://burke.services">Kevin Burke</a>. The
+        software has a <b>"no NIMBY's" license</b>. By viewing this page, you
+        agree to the <a href="/terms-of-service">terms of use</a>. Read our <a
+        href="/privacy">privacy policy</a>.
       </p>
       <p>
-      Compiled using {{ .Version }}. <a href="https://github.com/kevinburke/multi-emailer">View the source code and report errors</a>
+      Compiled using {{ .Version }}. <a href="https://github.com/yimbycode/emailer">View the source code and report errors</a>
       </p>
       </footer>
       <script>
